--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -48,3 +48,11 @@
   text-decoration: none;
   text-align: left;
 }
+
+.nav-link-profile-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border: 1px solid black;
+  border-radius: 50%;
+}
