settled sound.play via re-seeding of characters.audio_url

--- a/src/pages/editprofile.css
+++ b/src/pages/editprofile.css
@@ -53,3 +53,11 @@
   border-bottom: 1px solid rgb(128, 128, 128);
   font-size: 20px;
 }
+
+.custom-file-upload {
+  cursor: pointer;
+}
+
+.file-input {
+  display: none;
+}
