--- a/src/pages/characters.css
+++ b/src/pages/characters.css
@@ -8,11 +8,53 @@
 .character-selection-title {
   display: flex;
   width: 100%;
+  margin-bottom: 30px;
 }
 
-.character-selection {
+.active {
   width: 100%;
   cursor: pointer;
+  color: black;
+}
+
+.inactive {
+  width: 100%;
+  cursor: pointer;
+  color: grey;
+}
+
+.inactive:hover {
+  color: black;
+}
+
+.character-title {
+  display: flex;
+  margin-bottom: 30px;
+  align-items: center;
+}
+
+.character-title-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.character-title-title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.character-title-description {
+  font-size: 20px;
+  margin: 0;
+}
+
+.character-instruction {
+  font-size: 14px;
+  margin: 0;
+  margin-bottom: 5px;
 }
 
 .hirgana-basic-grid {
@@ -21,6 +63,7 @@
   gap: 16px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto;
+  margin-bottom: 30px;
 }
 
 .character-wrapper {
