--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -19,26 +19,21 @@
   padding: 0;
 }
 
-.nav-link-wrapper {
+.nav-link-text-wrapper {
+  display: flex;
   max-width: 100%;
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 10px 20px;
   border-radius: 10px;
-  cursor: pointer;
-}
-
-.nav-link-wrapper:hover {
-  background-color: #c2c2c2;
-}
-
-.nav-link-text-wrapper {
-  display: flex;
-  width: 100%;
   color: inherit;
   text-decoration: none;
   align-items: center;
   justify-content: center;
+}
+
+.nav-link-text-wrapper:hover {
+  background-color: #c2c2c2;
 }
 
 .nav-link-text {
