--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,39 @@
 .home-container {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-chapter-wrapper {
+  width: 60%;
+}
+
+.chapter-title-wrapper {
   width: 100%;
-  height: 100%;
+  background-color: antiquewhite;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.chapter-lesson-wrapper {
+  display: flex;
+  width: 100%;
+  background-color: rgb(229, 229, 229);
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.chapter-lesson {
+  height: 70px;
+  width: 75px;
+  border-radius: 50%;
+  background-color: aquamarine;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-bottom: 10px solid black;
 }
