--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -54,3 +54,14 @@
   color: inherit;
   text-decoration: none;
 }
+
+.edit-profile-btn-wrapper {
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: ease;
+  background-color: antiquewhite;
+}
+
+.edit-profile-btn-wrapper:hover {
+  transform: rotate(90deg);
+}
