--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -26,29 +26,44 @@
   padding-bottom: 30px;
 }
 
-.chapter-lesson {
-  height: 60px;
-  width: 75px;
-  border-radius: 50%;
-  background-color: aquamarine;
+.chapter-lesson-btn {
+  height: 65px;
+  width: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
   margin-top: 20px;
   margin-bottom: 20px;
-  box-shadow: rgb(104, 219, 180) 0px 8px 0px;
+  position: relative;
+  z-index: 0;
 }
 
-.chapter-lesson:hover {
-  background-color: rgb(120, 246, 204);
+.chapter-lesson-btn::before {
+  content: "";
+  background-color: rgb(104, 219, 180);
+  height: 10px;
+  width: 100%;
+  z-index: -1;
+  top: 32px;
+  position: absolute;
+}
+
+.chapter-lesson-btn::after {
+  content: "";
+  background-color: aquamarine;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  box-shadow: rgb(104, 219, 180) 0px 7px 0px;
+  height: 65px;
+  border-radius: 50%/50%;
+}
+
+.chapter-lesson-btn::after:hover {
+  background-color: black;
   box-shadow: rgb(100, 212, 175) 0px 8px 0px;
 }
 
-#two {
-  margin-right: 50px;
-}
-
-#three {
-  margin-right: 100px;
+.chapter-lesson {
+  position: absolute;
 }
