--- a/src/pages/characters.css
+++ b/src/pages/characters.css
@@ -3,34 +3,43 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  /* background-color: antiquewhite; */
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .character-selection-title {
   display: flex;
-  width: 100%;
+  width: 50%;
   margin-bottom: 30px;
 }
 
 .active {
   width: 100%;
   cursor: pointer;
-  color: black;
+  color: #9f7b71;
+  border-bottom: 4px solid #9f7b71;
 }
 
 .inactive {
   width: 100%;
   cursor: pointer;
-  color: grey;
+  color: rgb(204, 204, 204);
+  border-bottom: 4px solid rgb(204, 204, 204);
 }
 
 .inactive:hover {
-  color: black;
+  color: #9f7b71;
+  border-color: #9f7b71;
 }
 
 .character-title {
   display: flex;
   margin-bottom: 30px;
   align-items: center;
+  color: #9f7b71;
+  font-weight: 500;
 }
 
 .character-title-text {
@@ -44,6 +53,7 @@
 .character-title-title {
   font-size: 40px;
   margin: 0;
+  font-weight: 900;
 }
 
 .character-title-description {
@@ -72,8 +82,8 @@
   justify-content: center;
   align-items: center;
   border-style: solid;
-  border-width: 2px 2px 6px;
-  border-color: rgba(0, 0, 0, 0.298);
+  border-width: 3px 3px 8px;
+  border-color: #9f7b71;
   border-radius: 20px;
   cursor: pointer;
   transition-property: all;
@@ -81,22 +91,25 @@
   transition-timing-function: ease;
   width: 70px;
   height: 70px;
+  color: #9f7b71;
 }
 
 .character-wrapper:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(235, 160, 144, 0.5);
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.3) 0px 2px 2px;
 }
 
 .character-wrapper-empty {
   border-style: solid;
-  border-width: 2px 2px 6px;
-  border-color: rgba(0, 0, 0, 0.298);
+  border-width: 3px 3px 8px;
+  border-color: #9f7b71;
   border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(235, 160, 144, 0.5);
 }
 
 .character {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
 }
 
