--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -50,18 +50,9 @@
   font-size: 20px;
 }
 
-.edit-profile-btn {
-  color: inherit;
-  text-decoration: none;
-}
-
-.edit-profile-btn-wrapper {
-  transition-property: all;
-  transition-duration: 200ms;
-  transition-timing-function: ease;
-  background-color: antiquewhite;
-}
-
-.edit-profile-btn-wrapper:hover {
-  transform: rotate(90deg);
+.profile-settings-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
 }
