re-edited button.css and redesigned log logos

--- a/src/components/settingsButton.css
+++ b/src/components/settingsButton.css
@@ -1,5 +1,5 @@
 .settings-btn {
-  background-color: black;
+  background-color: #ee9f90;
   display: flex;
   flex-direction: column;
   align-items: center;
