--- a/src/components/logButton.css
+++ b/src/components/logButton.css
@@ -6,7 +6,7 @@
   width: 40px;
   height: 40px;
   padding: 10px;
-  background-color: black;
+  background-color: #ee9f90;
   border-radius: 15px;
   cursor: pointer;
 }
