rendered out waifu voice image in profile page and added select option for waifu voice in edit page but have not implemented any functionality yet

--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -60,6 +60,12 @@
   border-bottom: 2px solid rgba(159, 123, 113, 0.5);
 }
 
+.profile-waifu-voice {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
 .profile-settings-wrapper {
   display: flex;
   flex-direction: row;
