--- a/src/components/QuestionsComponents/matching.css
+++ b/src/components/QuestionsComponents/matching.css
@@ -1,10 +1,38 @@
-.matching-grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+.user-question-wrapper {
+  background-color: orange;
+  font-size: 30px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
 }
 
-.matching-grid-item {
-  background-color: #ccc;
-  padding: 10px;
+.matching-grid-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  background-color: aquamarine;
+}
+
+.columns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+#blue {
+  width: 75px;
+  height: 75px;
+  background-color: blue;
+}
+
+#white {
+  width: 75px;
+  height: 75px;
+  /* background-color: antiquewhite; */
 }
