--- a/src/components/QuestionsComponents/meaning.css
+++ b/src/components/QuestionsComponents/meaning.css
@@ -1,3 +1,21 @@
+.user-question-wrapper {
+  background-color: orange;
+  font-size: 30px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+}
+
+.user-answer-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: aquamarine;
+  flex: 1;
+}
+
 .selected {
   background-color: rgba(235, 160, 144, 0.5);
   color: #9f7b71;
