--- a/src/pages/lesson.css
+++ b/src/pages/lesson.css
@@ -3,18 +3,28 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width: 100%;
+  width: 60%;
+  background-color: antiquewhite;
 }
 
 .lesson-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
+  height: 100%;
+  width: 100%;
+  background-color: brown;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .question-wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   margin-bottom: 50px;
+  height: 100%;
+  width: 100%;
+  font-size: 30px;
 }
