--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -9,12 +9,19 @@
   width: 60%;
 }
 
-.chapter-title-wrapper {
+.chapter-title-container {
   width: 100%;
   background-color: antiquewhite;
   border-radius: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.chapter-title-wrapper {
+  text-align: left;
 }
 
 .chapter-lesson-wrapper {
