--- a/src/RootLayout/rootLayout.css
+++ b/src/RootLayout/rootLayout.css
@@ -4,11 +4,12 @@
   overflow-y: auto;
   color: #9f7b71;
   margin-left: 300px;
-  width: 100vw - 300px;
+  width: calc(100vw - 300px);
   font-family: "Rubik", sans-serif;
 }
 
 .app-body {
   display: flex;
   justify-content: center;
+  margin-bottom: 25px;
 }
