--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -13,12 +13,15 @@
   flex-direction: column;
   align-items: center;
   border-bottom: 2px solid rgba(159, 123, 113, 0.5);
+  background-image: url("../assets/profile-banner.png");
+  background-repeat: no-repeat;
+  background-position: 50% 10%;
+  background-size: cover;
 }
 
 .profile-title {
   margin-bottom: 30px;
   font-size: 50px;
-  line-height: 50px;
   font-weight: bold;
 }
 
