--- a/src/pages/editprofile.css
+++ b/src/pages/editprofile.css
@@ -62,6 +62,17 @@
   color: inherit;
 }
 
+.edit-profile-selection-info {
+  width: 75%;
+  border: 2px solid rgba(159, 123, 113, 0.5);
+  font-size: 20px;
+  padding: 10px 10px;
+  text-align: left;
+  color: inherit;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
 .edit-profile-text-info:focus {
   outline: none;
 }
