--- a/src/pages/lesson.css
+++ b/src/pages/lesson.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width: 60%;
+  width: 75%;
   background-color: antiquewhite;
 }
 
@@ -13,7 +13,6 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  background-color: brown;
   justify-content: space-between;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -27,4 +26,13 @@
   height: 100%;
   width: 100%;
   font-size: 30px;
+}
+
+.advancement-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: antiquewhite;
+  padding-top: 50px;
+  border-top: 2px solid rgba(159, 123, 113, 0.5);
 }
