--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -43,11 +43,18 @@
   padding: 10px;
   border-radius: 15px;
   border: none;
+  border-style: solid;
+  border-width: 2px 2px 5px;
+  border-color: #00000029;
   cursor: pointer;
   color: white;
   font-weight: bold;
   font-size: 20px;
   width: 150px;
+}
+
+.advancement-button-wrapper:hover {
+  color: rgb(237, 237, 237);
 }
 
 .translation-button-wrapper {
