--- a/src/components/QuestionsComponents/recognition.css
+++ b/src/components/QuestionsComponents/recognition.css
@@ -1,5 +1,4 @@
 .user-question-wrapper {
-  background-color: orange;
   font-size: 30px;
   flex: 1;
   display: flex;
@@ -12,7 +11,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: aquamarine;
   flex: 1;
 }
 
@@ -21,11 +19,9 @@
   color: #9f7b71;
 }
 
-.wordArray-grid {
-  /* display: grid;
-  grid-auto-columns: 1fr;
+.wordArray-recognition-grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
-  width: 320px; */
 }
