--- a/src/components/QuestionsComponents/matching.css
+++ b/src/components/QuestionsComponents/matching.css
@@ -17,24 +17,31 @@
 
 .columns {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: bisque;
 }
 
 #default {
   margin: 5px;
-  width: 75px;
-  height: 75px;
-  background-color: rgba(233, 171, 158, 0.847);
+  width: 40%;
+  padding: 20px 15px;
+  background-color: #9f7b71;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
+  font-weight: 700;
 }
 
 #white {
   margin: 5px;
-  width: 75px;
-  height: 75px;
+  width: 40%;
+  padding: 20px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
 }
