--- a/src/pages/editprofile.css
+++ b/src/pages/editprofile.css
@@ -18,17 +18,17 @@
 .edit-profile-title {
   margin-bottom: 30px;
   font-size: 50px;
-  line-height: 50px;
   font-weight: bold;
 }
 
 .edit-profile-image {
-  width: 150px;
   height: 150px;
+  width: 150px;
   object-fit: cover;
   border-radius: 50%;
   margin-bottom: 15px;
   border: 8px solid;
+  background-color: white;
 }
 
 .edit-profile-info-container {
