--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -26,7 +26,7 @@
   color: #570344;
   border-style: solid;
   border-width: 2px 2px 8px;
-  border-color: #9f7b71;
+  border-color: #570344;
 }
 
 .chapter-title-wrapper {
