--- a/src/pages/lesson.css
+++ b/src/pages/lesson.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 75%;
 }
@@ -25,6 +26,7 @@
   height: 100%;
   width: 100%;
   font-size: 30px;
+  background-color: antiquewhite;
 }
 
 .advancement-wrapper {
