--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -42,7 +42,6 @@
   flex-direction: column;
   align-items: stretch;
   margin-bottom: 10px;
-  /* background-color: aqua; */
 }
 
 .profile-info-wrapper {
@@ -50,7 +49,6 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
-  /* background-color: burlywood; */
   width: 100%;
 }
 
@@ -65,6 +63,7 @@
   width: 75%;
   font-size: 20px;
   text-align: left;
+  padding-left: 10px;
   padding-bottom: 10px;
   border-bottom: 2px solid rgba(159, 123, 113, 0.5);
 }
