--- a/src/pages/voices.css
+++ b/src/pages/voices.css
@@ -17,7 +17,7 @@
   margin-right: auto;
   margin-left: auto;
   grid-auto-columns: 1fr;
-  gap: 16px;
+  gap: 20px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto;
 }
@@ -44,7 +44,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  border-top: solid 1px black;
+  border-top: solid 1px rgba(159, 123, 113, 0.5);
   padding-top: 10px;
   margin-top: 10px;
 }
@@ -53,6 +53,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  margin-left: 10px;
 }
 
 .voices-character-japanese {
