--- a/src/components/QuestionsComponents/writing.css
+++ b/src/components/QuestionsComponents/writing.css
@@ -6,3 +6,16 @@
   justify-content: center;
   color: #9f7b71;
 }
+
+.canvas-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.canvas-wrapper {
+  border-radius: 25px;
+  border: 1px solid #9f7b71;
+  box-shadow: 0 0.5em 1em -0.125em hsla(0, 0%, 4%, 0.1),
+    0 0 0 1px hsla(0, 0%, 4%, 0.02);
+}
