--- a/src/pages/vocab.css
+++ b/src/pages/vocab.css
@@ -34,10 +34,13 @@
 }
 
 .chapter-lesson-wrapper {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
+  display: grid;
+  grid-auto-columns: 1fr;
   align-items: center;
+  justify-items: center;
+  gap: 16px;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
   padding-top: 30px;
   padding-bottom: 30px;
 }
